Word overflowing fixed

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -50,6 +50,7 @@ textarea {
   border: none;
   font-size: 1em;
   outline: none;
+  font-family: "Poppins" sans-serif !important;
 }
 
 .buttons-wrapper {
